// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DataSources /> should render properly with data sources 1`] = `
Array [
  .emotion-0 {
  font-size: 18px;
  line-height: 21px;
  font-weight: 400;
  padding-top: 24px;
  padding-bottom: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<h2
    className="emotion-0"
  >
    Data Sources
  </h2>,
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 8px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  background-color: #e3f7e8;
  border-radius: 2px;
  padding: 12px;
  padding-left: 16px;
  padding-right: 16px;
}

.emotion-2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-left: 12px;
  color: #191919;
  font-weight: 500;
  white-space: pre-line;
}

.emotion-2 a {
  color: #191919;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  margin-left: 4px;
}

.emotion-2 a:hover {
  color: #3A5DFF;
}

<div
    className="emotion-0"
  >
    <div
      className="emotion-1"
    >
      <svg
        color="#009f22"
        data-file-name="checkmark.svg"
        height={20}
      />
      <div
        className="emotion-2"
        role="alert"
      >
        Data source
         created
        .
         
        <a
          href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/1a1d45af-7477-1396-ae57-a618e8efb91f"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Check Job Status
        </a>
      </div>
    </div>
  </div>,
  .emotion-0 {
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-1 {
  list-style-type: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-bottom: 1px solid #4a4a4a;
}

.emotion-2 {
  padding-right: 16px;
  margin-bottom: -1px;
}

.emotion-3 {
  border: 0 #3A5DFF solid;
  border-bottom-width: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 8px;
  padding-bottom: 8px;
  text-transform: uppercase;
  font-size: 17px;
  line-height: 20px;
  font-weight: 700;
}

.emotion-3:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-5 {
  border: 0 #3A5DFF solid;
  border-bottom-width: 0;
  color: #b3b3b3;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 8px;
  padding-bottom: 8px;
  text-transform: uppercase;
  font-size: 17px;
  line-height: 20px;
  font-weight: 700;
}

.emotion-5:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3A5DFF;
}

<nav
    className="emotion-0"
  >
    <ul
      className="emotion-1"
    >
      <li
        className="emotion-2"
      >
        <a
          className="emotion-3"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/data-sources"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          View all
        </a>
      </li>
      <li
        className="emotion-2"
      >
        <a
          className="emotion-5"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/data-sources/add"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Create Data Source
        </a>
      </li>
    </ul>
  </nav>,
  .emotion-0 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-1 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  padding-bottom: 16px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-3 {
  color: #b3b3b3;
  font-size: 15px;
  line-height: 19px;
  font-weight: 400;
}

.emotion-4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
}

.emotion-6 {
  height: auto;
  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
  white-space: nowrap;
}

.emotion-6 tr {
  background-color: #252525;
}

.emotion-6 tr:nth-of-type(2n) {
  background-color: #2e2e2e;
}

.emotion-6 tr:hover {
  background-color: #4a4a4a;
  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.5);
}

.emotion-6 tr:hover .actions {
  color: #b3b3b3;
}

.emotion-6 tr:hover td {
  border: 1px solid #808080;
  border-left: 0;
  border-right: 0;
}

.emotion-6 tr:hover td:first-of-type {
  border-left: 1px solid #808080;
}

.emotion-6 tr:hover td:last-of-type {
  border-right: 1px solid #808080;
}

.emotion-6 td {
  max-width: calc(100vw / 6);
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  color: #e0e0e0;
  padding: 8px 16px;
  border: 1px solid transparent;
  border-left: 0;
  border-right: 0;
}

.emotion-6 td:first-of-type {
  border-left: 1px solid transparent;
}

.emotion-6 td:last-of-type {
  border-right: 1px solid transparent;
  overflow: visible;
}

.emotion-7 {
  text-align: left;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  color: #e0e0e0;
  background-color: #4a4a4a;
  padding: 0;
  border-bottom: 1px solid #2e2e2e;
  width: auto;
}

.emotion-7:nth-of-type(3) {
  width: 100%;
}

.emotion-7:not(:last-child) {
  border-right: 1px solid #2e2e2e;
}

.emotion-8 {
  padding: 12px 16px;
}

.emotion-19 {
  text-align: left;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  color: #e0e0e0;
  background-color: #4a4a4a;
  padding: 0;
  border-bottom: 1px solid #2e2e2e;
  width: 1px;
}

.emotion-19:nth-of-type(3) {
  width: 100%;
}

.emotion-19:not(:last-child) {
  border-right: 1px solid #2e2e2e;
}

.emotion-20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 12px 16px;
}

.emotion-21 {
  cursor: pointer;
}

.emotion-22:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-23 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-24 {
  margin-right: 16px;
}

.emotion-26 {
  position: relative;
  height: 100%;
}

.emotion-27 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 6px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #191919;
  background-color: transparent;
  margin: -6px;
}

.emotion-27:hover,
.emotion-27.focus-visible:focus {
  color: #ffffff!important;
}

<div
    className="emotion-0"
  >
    <div
      className="emotion-1"
    >
      <div
        className="emotion-2"
      >
        <h3
          className="emotion-3"
        >
          Number of 
          Sources
          : 
          5
        </h3>
      </div>
      <div
        className="emotion-4"
      >
        <div
          className="emotion-5"
        >
          <table
            className="emotion-6"
          >
            <thead>
              <tr>
                <th
                  className="emotion-7"
                >
                  <div
                    className="emotion-8"
                  >
                    Name
                  </div>
                </th>
                <th
                  className="emotion-7"
                >
                  <div
                    className="emotion-8"
                  >
                    Source Type
                  </div>
                </th>
                <th
                  className="emotion-7"
                >
                  <div
                    className="emotion-8"
                  >
                    Path
                  </div>
                </th>
                <th
                  className="emotion-7"
                >
                  <div
                    className="emotion-8"
                  >
                    Date Created
                  </div>
                </th>
                <th
                  className="emotion-7"
                >
                  <div
                    className="emotion-8"
                  >
                    Date Modified
                  </div>
                </th>
                <th
                  className="emotion-7"
                >
                  <div
                    className="emotion-8"
                  >
                    File Types
                  </div>
                </th>
                <th
                  className="emotion-19"
                >
                  <div
                    className="emotion-20"
                  >
                    <svg
                      data-file-name="kebab.svg"
                      height={20}
                    />
                  </div>
                </th>
              </tr>
            </thead>
            <tbody>
              <tr
                className="emotion-21"
                onClick={[Function]}
              >
                <td>
                  <a
                    className="emotion-22"
                    href="/76917058-b147-4556-987a-0a0f11e46d9b/data-sources/2f0de857-95fd-120e-85f3-0242ac120002/edit"
                    onClick={[Function]}
                    onMouseEnter={[Function]}
                  >
                    test
                  </a>
                </td>
                <td>
                  Amazon Web Service (AWS)
                </td>
                <td>
                  s3://zorroa-dev-data
                </td>
                <td>
                  2020-02-10 01:37:47
                </td>
                <td>
                  2020-02-10 01:37:47
                </td>
                <td>
                  <div
                    className="emotion-23"
                  >
                    <svg
                      className="emotion-24"
                      color="#ebb52e"
                      data-file-name="images.svg"
                      height={24}
                    />
                    <svg
                      className="emotion-24"
                      color="transparent"
                      data-file-name="documents.svg"
                      height={24}
                    />
                    <svg
                      color="transparent"
                      data-file-name="videos.svg"
                      height={24}
                    />
                  </div>
                </td>
                <td>
                  <div
                    className="emotion-26"
                  >
                    <button
                      aria-label="Toggle Actions Menu"
                      className="actions emotion-27"
                      onBlur={[Function]}
                      onClick={[Function]}
                      type="button"
                    >
                      <svg
                        data-file-name="kebab.svg"
                        height={20}
                      />
                    </button>
                  </div>
                </td>
              </tr>
              <tr
                className="emotion-21"
                onClick={[Function]}
              >
                <td>
                  <a
                    className="emotion-22"
                    href="/76917058-b147-4556-987a-0a0f11e46d9b/data-sources/2f0de85b-95fd-120e-85f3-0242ac120002/edit"
                    onClick={[Function]}
                    onMouseEnter={[Function]}
                  >
                    test2
                  </a>
                </td>
                <td>
                  Azure
                </td>
                <td>
                  azure://zorroa-dev-data
                </td>
                <td>
                  2020-02-10 01:40:26
                </td>
                <td>
                  2020-02-10 01:40:26
                </td>
                <td>
                  <div
                    className="emotion-23"
                  >
                    <svg
                      className="emotion-24"
                      color="transparent"
                      data-file-name="images.svg"
                      height={24}
                    />
                    <svg
                      className="emotion-24"
                      color="#00bdc1"
                      data-file-name="documents.svg"
                      height={24}
                    />
                    <svg
                      color="transparent"
                      data-file-name="videos.svg"
                      height={24}
                    />
                  </div>
                </td>
                <td>
                  <div
                    className="emotion-26"
                  >
                    <button
                      aria-label="Toggle Actions Menu"
                      className="actions emotion-27"
                      onBlur={[Function]}
                      onClick={[Function]}
                      type="button"
                    >
                      <svg
                        data-file-name="kebab.svg"
                        height={20}
                      />
                    </button>
                  </div>
                </td>
              </tr>
              <tr
                className="emotion-21"
                onClick={[Function]}
              >
                <td>
                  <a
                    className="emotion-22"
                    href="/76917058-b147-4556-987a-0a0f11e46d9b/data-sources/2f0de85f-95fd-120e-85f3-0242ac120002/edit"
                    onClick={[Function]}
                    onMouseEnter={[Function]}
                  >
                    test3
                  </a>
                </td>
                <td>
                  Google Cloud Platform (GCP)
                </td>
                <td>
                  gs://zorroa-dev-data
                </td>
                <td>
                  2020-02-10 01:42:23
                </td>
                <td>
                  2020-02-10 01:42:23
                </td>
                <td>
                  <div
                    className="emotion-23"
                  >
                    <svg
                      className="emotion-24"
                      color="transparent"
                      data-file-name="images.svg"
                      height={24}
                    />
                    <svg
                      className="emotion-24"
                      color="transparent"
                      data-file-name="documents.svg"
                      height={24}
                    />
                    <svg
                      color="#8f89e7"
                      data-file-name="videos.svg"
                      height={24}
                    />
                  </div>
                </td>
                <td>
                  <div
                    className="emotion-26"
                  >
                    <button
                      aria-label="Toggle Actions Menu"
                      className="actions emotion-27"
                      onBlur={[Function]}
                      onClick={[Function]}
                      type="button"
                    >
                      <svg
                        data-file-name="kebab.svg"
                        height={20}
                      />
                    </button>
                  </div>
                </td>
              </tr>
              <tr
                className="emotion-21"
                onClick={[Function]}
              >
                <td>
                  <a
                    className="emotion-22"
                    href="/76917058-b147-4556-987a-0a0f11e46d9b/data-sources/3eee30e4-3aaf-1933-b424-0242ac12000e/edit"
                    onClick={[Function]}
                    onMouseEnter={[Function]}
                  >
                    test4
                  </a>
                </td>
                <td>
                  Unknown
                </td>
                <td>
                  ftp://zorroa-dev-data
                </td>
                <td>
                  2020-02-10 16:21:18
                </td>
                <td>
                  2020-02-10 16:21:18
                </td>
                <td>
                  <div
                    className="emotion-23"
                  >
                    <svg
                      className="emotion-24"
                      color="#ebb52e"
                      data-file-name="images.svg"
                      height={24}
                    />
                    <svg
                      className="emotion-24"
                      color="#00bdc1"
                      data-file-name="documents.svg"
                      height={24}
                    />
                    <svg
                      color="#8f89e7"
                      data-file-name="videos.svg"
                      height={24}
                    />
                  </div>
                </td>
                <td>
                  <div
                    className="emotion-26"
                  >
                    <button
                      aria-label="Toggle Actions Menu"
                      className="actions emotion-27"
                      onBlur={[Function]}
                      onClick={[Function]}
                      type="button"
                    >
                      <svg
                        data-file-name="kebab.svg"
                        height={20}
                      />
                    </button>
                  </div>
                </td>
              </tr>
              <tr
                className="emotion-21"
                onClick={[Function]}
              >
                <td>
                  <a
                    className="emotion-22"
                    href="/76917058-b147-4556-987a-0a0f11e46d9b/data-sources/3eee30e8-3aaf-1933-b424-0242ac12000e/edit"
                    onClick={[Function]}
                    onMouseEnter={[Function]}
                  >
                    test5
                  </a>
                </td>
                <td>
                  Google Cloud Platform (GCP)
                </td>
                <td>
                  gs://zorroa-dev-data
                </td>
                <td>
                  2020-02-10 16:47:39
                </td>
                <td>
                  2020-02-10 16:47:39
                </td>
                <td>
                  <div
                    className="emotion-23"
                  >
                    <svg
                      className="emotion-24"
                      color="transparent"
                      data-file-name="images.svg"
                      height={24}
                    />
                    <svg
                      className="emotion-24"
                      color="transparent"
                      data-file-name="documents.svg"
                      height={24}
                    />
                    <svg
                      color="#8f89e7"
                      data-file-name="videos.svg"
                      height={24}
                    />
                  </div>
                </td>
                <td>
                  <div
                    className="emotion-26"
                  >
                    <button
                      aria-label="Toggle Actions Menu"
                      className="actions emotion-27"
                      onBlur={[Function]}
                      onClick={[Function]}
                      type="button"
                    >
                      <svg
                        data-file-name="kebab.svg"
                        height={20}
                      />
                    </button>
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
        <div>
           
        </div>
        <div>
           
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`<DataSources /> should render properly with edit success 1`] = `
Array [
  .emotion-0 {
  font-size: 18px;
  line-height: 21px;
  font-weight: 400;
  padding-top: 24px;
  padding-bottom: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<h2
    className="emotion-0"
  >
    Data Sources
  </h2>,
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 8px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  background-color: #e3f7e8;
  border-radius: 2px;
  padding: 12px;
  padding-left: 16px;
  padding-right: 16px;
}

.emotion-2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-left: 12px;
  color: #191919;
  font-weight: 500;
  white-space: pre-line;
}

.emotion-2 a {
  color: #191919;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  margin-left: 4px;
}

.emotion-2 a:hover {
  color: #3A5DFF;
}

<div
    className="emotion-0"
  >
    <div
      className="emotion-1"
    >
      <svg
        color="#009f22"
        data-file-name="checkmark.svg"
        height={20}
      />
      <div
        className="emotion-2"
        role="alert"
      >
        Data source
         edited
        .
         
      </div>
    </div>
  </div>,
  .emotion-0 {
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-1 {
  list-style-type: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-bottom: 1px solid #4a4a4a;
}

.emotion-2 {
  padding-right: 16px;
  margin-bottom: -1px;
}

.emotion-3 {
  border: 0 #3A5DFF solid;
  border-bottom-width: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 8px;
  padding-bottom: 8px;
  text-transform: uppercase;
  font-size: 17px;
  line-height: 20px;
  font-weight: 700;
}

.emotion-3:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-5 {
  border: 0 #3A5DFF solid;
  border-bottom-width: 0;
  color: #b3b3b3;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 8px;
  padding-bottom: 8px;
  text-transform: uppercase;
  font-size: 17px;
  line-height: 20px;
  font-weight: 700;
}

.emotion-5:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3A5DFF;
}

<nav
    className="emotion-0"
  >
    <ul
      className="emotion-1"
    >
      <li
        className="emotion-2"
      >
        <a
          className="emotion-3"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/data-sources"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          View all
        </a>
      </li>
      <li
        className="emotion-2"
      >
        <a
          className="emotion-5"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/data-sources/add"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Create Data Source
        </a>
      </li>
    </ul>
  </nav>,
  .emotion-0 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-1 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  padding-bottom: 16px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-3 {
  color: #b3b3b3;
  font-size: 15px;
  line-height: 19px;
  font-weight: 400;
}

.emotion-4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
}

.emotion-6 {
  height: auto;
  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
  white-space: nowrap;
}

.emotion-6 tr {
  background-color: #252525;
}

.emotion-6 tr:nth-of-type(2n) {
  background-color: #2e2e2e;
}

.emotion-6 tr:hover {
  background-color: #4a4a4a;
  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.5);
}

.emotion-6 tr:hover .actions {
  color: #b3b3b3;
}

.emotion-6 tr:hover td {
  border: 1px solid #808080;
  border-left: 0;
  border-right: 0;
}

.emotion-6 tr:hover td:first-of-type {
  border-left: 1px solid #808080;
}

.emotion-6 tr:hover td:last-of-type {
  border-right: 1px solid #808080;
}

.emotion-6 td {
  max-width: calc(100vw / 6);
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  color: #e0e0e0;
  padding: 8px 16px;
  border: 1px solid transparent;
  border-left: 0;
  border-right: 0;
}

.emotion-6 td:first-of-type {
  border-left: 1px solid transparent;
}

.emotion-6 td:last-of-type {
  border-right: 1px solid transparent;
  overflow: visible;
}

.emotion-7 {
  text-align: left;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  color: #e0e0e0;
  background-color: #4a4a4a;
  padding: 0;
  border-bottom: 1px solid #2e2e2e;
  width: auto;
}

.emotion-7:nth-of-type(3) {
  width: 100%;
}

.emotion-7:not(:last-child) {
  border-right: 1px solid #2e2e2e;
}

.emotion-8 {
  padding: 12px 16px;
}

.emotion-19 {
  text-align: left;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  color: #e0e0e0;
  background-color: #4a4a4a;
  padding: 0;
  border-bottom: 1px solid #2e2e2e;
  width: 1px;
}

.emotion-19:nth-of-type(3) {
  width: 100%;
}

.emotion-19:not(:last-child) {
  border-right: 1px solid #2e2e2e;
}

.emotion-20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 12px 16px;
}

.emotion-21 {
  cursor: pointer;
}

.emotion-22:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-23 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-24 {
  margin-right: 16px;
}

.emotion-26 {
  position: relative;
  height: 100%;
}

.emotion-27 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 6px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #191919;
  background-color: transparent;
  margin: -6px;
}

.emotion-27:hover,
.emotion-27.focus-visible:focus {
  color: #ffffff!important;
}

<div
    className="emotion-0"
  >
    <div
      className="emotion-1"
    >
      <div
        className="emotion-2"
      >
        <h3
          className="emotion-3"
        >
          Number of 
          Sources
          : 
          5
        </h3>
      </div>
      <div
        className="emotion-4"
      >
        <div
          className="emotion-5"
        >
          <table
            className="emotion-6"
          >
            <thead>
              <tr>
                <th
                  className="emotion-7"
                >
                  <div
                    className="emotion-8"
                  >
                    Name
                  </div>
                </th>
                <th
                  className="emotion-7"
                >
                  <div
                    className="emotion-8"
                  >
                    Source Type
                  </div>
                </th>
                <th
                  className="emotion-7"
                >
                  <div
                    className="emotion-8"
                  >
                    Path
                  </div>
                </th>
                <th
                  className="emotion-7"
                >
                  <div
                    className="emotion-8"
                  >
                    Date Created
                  </div>
                </th>
                <th
                  className="emotion-7"
                >
                  <div
                    className="emotion-8"
                  >
                    Date Modified
                  </div>
                </th>
                <th
                  className="emotion-7"
                >
                  <div
                    className="emotion-8"
                  >
                    File Types
                  </div>
                </th>
                <th
                  className="emotion-19"
                >
                  <div
                    className="emotion-20"
                  >
                    <svg
                      data-file-name="kebab.svg"
                      height={20}
                    />
                  </div>
                </th>
              </tr>
            </thead>
            <tbody>
              <tr
                className="emotion-21"
                onClick={[Function]}
              >
                <td>
                  <a
                    className="emotion-22"
                    href="/76917058-b147-4556-987a-0a0f11e46d9b/data-sources/2f0de857-95fd-120e-85f3-0242ac120002/edit"
                    onClick={[Function]}
                    onMouseEnter={[Function]}
                  >
                    test
                  </a>
                </td>
                <td>
                  Amazon Web Service (AWS)
                </td>
                <td>
                  s3://zorroa-dev-data
                </td>
                <td>
                  2020-02-10 01:37:47
                </td>
                <td>
                  2020-02-10 01:37:47
                </td>
                <td>
                  <div
                    className="emotion-23"
                  >
                    <svg
                      className="emotion-24"
                      color="#ebb52e"
                      data-file-name="images.svg"
                      height={24}
                    />
                    <svg
                      className="emotion-24"
                      color="transparent"
                      data-file-name="documents.svg"
                      height={24}
                    />
                    <svg
                      color="transparent"
                      data-file-name="videos.svg"
                      height={24}
                    />
                  </div>
                </td>
                <td>
                  <div
                    className="emotion-26"
                  >
                    <button
                      aria-label="Toggle Actions Menu"
                      className="actions emotion-27"
                      onBlur={[Function]}
                      onClick={[Function]}
                      type="button"
                    >
                      <svg
                        data-file-name="kebab.svg"
                        height={20}
                      />
                    </button>
                  </div>
                </td>
              </tr>
              <tr
                className="emotion-21"
                onClick={[Function]}
              >
                <td>
                  <a
                    className="emotion-22"
                    href="/76917058-b147-4556-987a-0a0f11e46d9b/data-sources/2f0de85b-95fd-120e-85f3-0242ac120002/edit"
                    onClick={[Function]}
                    onMouseEnter={[Function]}
                  >
                    test2
                  </a>
                </td>
                <td>
                  Azure
                </td>
                <td>
                  azure://zorroa-dev-data
                </td>
                <td>
                  2020-02-10 01:40:26
                </td>
                <td>
                  2020-02-10 01:40:26
                </td>
                <td>
                  <div
                    className="emotion-23"
                  >
                    <svg
                      className="emotion-24"
                      color="transparent"
                      data-file-name="images.svg"
                      height={24}
                    />
                    <svg
                      className="emotion-24"
                      color="#00bdc1"
                      data-file-name="documents.svg"
                      height={24}
                    />
                    <svg
                      color="transparent"
                      data-file-name="videos.svg"
                      height={24}
                    />
                  </div>
                </td>
                <td>
                  <div
                    className="emotion-26"
                  >
                    <button
                      aria-label="Toggle Actions Menu"
                      className="actions emotion-27"
                      onBlur={[Function]}
                      onClick={[Function]}
                      type="button"
                    >
                      <svg
                        data-file-name="kebab.svg"
                        height={20}
                      />
                    </button>
                  </div>
                </td>
              </tr>
              <tr
                className="emotion-21"
                onClick={[Function]}
              >
                <td>
                  <a
                    className="emotion-22"
                    href="/76917058-b147-4556-987a-0a0f11e46d9b/data-sources/2f0de85f-95fd-120e-85f3-0242ac120002/edit"
                    onClick={[Function]}
                    onMouseEnter={[Function]}
                  >
                    test3
                  </a>
                </td>
                <td>
                  Google Cloud Platform (GCP)
                </td>
                <td>
                  gs://zorroa-dev-data
                </td>
                <td>
                  2020-02-10 01:42:23
                </td>
                <td>
                  2020-02-10 01:42:23
                </td>
                <td>
                  <div
                    className="emotion-23"
                  >
                    <svg
                      className="emotion-24"
                      color="transparent"
                      data-file-name="images.svg"
                      height={24}
                    />
                    <svg
                      className="emotion-24"
                      color="transparent"
                      data-file-name="documents.svg"
                      height={24}
                    />
                    <svg
                      color="#8f89e7"
                      data-file-name="videos.svg"
                      height={24}
                    />
                  </div>
                </td>
                <td>
                  <div
                    className="emotion-26"
                  >
                    <button
                      aria-label="Toggle Actions Menu"
                      className="actions emotion-27"
                      onBlur={[Function]}
                      onClick={[Function]}
                      type="button"
                    >
                      <svg
                        data-file-name="kebab.svg"
                        height={20}
                      />
                    </button>
                  </div>
                </td>
              </tr>
              <tr
                className="emotion-21"
                onClick={[Function]}
              >
                <td>
                  <a
                    className="emotion-22"
                    href="/76917058-b147-4556-987a-0a0f11e46d9b/data-sources/3eee30e4-3aaf-1933-b424-0242ac12000e/edit"
                    onClick={[Function]}
                    onMouseEnter={[Function]}
                  >
                    test4
                  </a>
                </td>
                <td>
                  Unknown
                </td>
                <td>
                  ftp://zorroa-dev-data
                </td>
                <td>
                  2020-02-10 16:21:18
                </td>
                <td>
                  2020-02-10 16:21:18
                </td>
                <td>
                  <div
                    className="emotion-23"
                  >
                    <svg
                      className="emotion-24"
                      color="#ebb52e"
                      data-file-name="images.svg"
                      height={24}
                    />
                    <svg
                      className="emotion-24"
                      color="#00bdc1"
                      data-file-name="documents.svg"
                      height={24}
                    />
                    <svg
                      color="#8f89e7"
                      data-file-name="videos.svg"
                      height={24}
                    />
                  </div>
                </td>
                <td>
                  <div
                    className="emotion-26"
                  >
                    <button
                      aria-label="Toggle Actions Menu"
                      className="actions emotion-27"
                      onBlur={[Function]}
                      onClick={[Function]}
                      type="button"
                    >
                      <svg
                        data-file-name="kebab.svg"
                        height={20}
                      />
                    </button>
                  </div>
                </td>
              </tr>
              <tr
                className="emotion-21"
                onClick={[Function]}
              >
                <td>
                  <a
                    className="emotion-22"
                    href="/76917058-b147-4556-987a-0a0f11e46d9b/data-sources/3eee30e8-3aaf-1933-b424-0242ac12000e/edit"
                    onClick={[Function]}
                    onMouseEnter={[Function]}
                  >
                    test5
                  </a>
                </td>
                <td>
                  Google Cloud Platform (GCP)
                </td>
                <td>
                  gs://zorroa-dev-data
                </td>
                <td>
                  2020-02-10 16:47:39
                </td>
                <td>
                  2020-02-10 16:47:39
                </td>
                <td>
                  <div
                    className="emotion-23"
                  >
                    <svg
                      className="emotion-24"
                      color="transparent"
                      data-file-name="images.svg"
                      height={24}
                    />
                    <svg
                      className="emotion-24"
                      color="transparent"
                      data-file-name="documents.svg"
                      height={24}
                    />
                    <svg
                      color="#8f89e7"
                      data-file-name="videos.svg"
                      height={24}
                    />
                  </div>
                </td>
                <td>
                  <div
                    className="emotion-26"
                  >
                    <button
                      aria-label="Toggle Actions Menu"
                      className="actions emotion-27"
                      onBlur={[Function]}
                      onClick={[Function]}
                      type="button"
                    >
                      <svg
                        data-file-name="kebab.svg"
                        height={20}
                      />
                    </button>
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
        <div>
           
        </div>
        <div>
           
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`<DataSources /> should render properly with no data sources 1`] = `
Array [
  .emotion-0 {
  font-size: 18px;
  line-height: 21px;
  font-weight: 400;
  padding-top: 24px;
  padding-bottom: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<h2
    className="emotion-0"
  >
    Data Sources
  </h2>,
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 8px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  background-color: #e3f7e8;
  border-radius: 2px;
  padding: 12px;
  padding-left: 16px;
  padding-right: 16px;
}

.emotion-2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-left: 12px;
  color: #191919;
  font-weight: 500;
  white-space: pre-line;
}

.emotion-2 a {
  color: #191919;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  margin-left: 4px;
}

.emotion-2 a:hover {
  color: #3A5DFF;
}

<div
    className="emotion-0"
  >
    <div
      className="emotion-1"
    >
      <svg
        color="#009f22"
        data-file-name="checkmark.svg"
        height={20}
      />
      <div
        className="emotion-2"
        role="alert"
      >
        Data source
         deleted
        .
         
      </div>
    </div>
  </div>,
  .emotion-0 {
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-1 {
  list-style-type: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-bottom: 1px solid #4a4a4a;
}

.emotion-2 {
  padding-right: 16px;
  margin-bottom: -1px;
}

.emotion-3 {
  border: 0 #3A5DFF solid;
  border-bottom-width: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 8px;
  padding-bottom: 8px;
  text-transform: uppercase;
  font-size: 17px;
  line-height: 20px;
  font-weight: 700;
}

.emotion-3:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-5 {
  border: 0 #3A5DFF solid;
  border-bottom-width: 0;
  color: #b3b3b3;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 8px;
  padding-bottom: 8px;
  text-transform: uppercase;
  font-size: 17px;
  line-height: 20px;
  font-weight: 700;
}

.emotion-5:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3A5DFF;
}

<nav
    className="emotion-0"
  >
    <ul
      className="emotion-1"
    >
      <li
        className="emotion-2"
      >
        <a
          className="emotion-3"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/data-sources"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          View all
        </a>
      </li>
      <li
        className="emotion-2"
      >
        <a
          className="emotion-5"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/data-sources/add"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Create Data Source
        </a>
      </li>
    </ul>
  </nav>,
  .emotion-0 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-1 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  padding-bottom: 16px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-3 {
  color: #b3b3b3;
  font-size: 15px;
  line-height: 19px;
  font-weight: 400;
}

.emotion-4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
}

.emotion-5 {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.emotion-6 {
  height: 100%;
  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
  white-space: nowrap;
}

.emotion-6 tr {
  background-color: #252525;
}

.emotion-6 tr:nth-of-type(2n) {
  background-color: #2e2e2e;
}

.emotion-6 tr:hover {
  background-color: #4a4a4a;
  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.5);
}

.emotion-6 tr:hover .actions {
  color: #b3b3b3;
}

.emotion-6 tr:hover td {
  border: 1px solid #808080;
  border-left: 0;
  border-right: 0;
}

.emotion-6 tr:hover td:first-of-type {
  border-left: 1px solid #808080;
}

.emotion-6 tr:hover td:last-of-type {
  border-right: 1px solid #808080;
}

.emotion-6 td {
  max-width: calc(100vw / 6);
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  color: #e0e0e0;
  padding: 8px 16px;
  border: 1px solid transparent;
  border-left: 0;
  border-right: 0;
}

.emotion-6 td:first-of-type {
  border-left: 1px solid transparent;
}

.emotion-6 td:last-of-type {
  border-right: 1px solid transparent;
  overflow: visible;
}

.emotion-7 {
  text-align: left;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  color: #e0e0e0;
  background-color: #4a4a4a;
  padding: 0;
  border-bottom: 1px solid #2e2e2e;
  width: auto;
}

.emotion-7:nth-of-type(3) {
  width: 100%;
}

.emotion-7:not(:last-child) {
  border-right: 1px solid #2e2e2e;
}

.emotion-8 {
  padding: 12px 16px;
}

.emotion-19 {
  text-align: left;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  color: #e0e0e0;
  background-color: #4a4a4a;
  padding: 0;
  border-bottom: 1px solid #2e2e2e;
  width: 1px;
}

.emotion-19:nth-of-type(3) {
  width: 100%;
}

.emotion-19:not(:last-child) {
  border-right: 1px solid #2e2e2e;
}

.emotion-20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 12px 16px;
}

.emotion-21 {
  height: 100%;
  pointer-events: none;
}

.emotion-22 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  text-align: center;
  color: #808080;
  font-size: 15px;
  line-height: 19px;
}

<div
    className="emotion-0"
  >
    <div
      className="emotion-1"
    >
      <div
        className="emotion-2"
      >
        <h3
          className="emotion-3"
        >
          Number of 
          Sources
          : 
          0
        </h3>
      </div>
      <div
        className="emotion-4"
      >
        <div
          className="emotion-5"
        >
          <table
            className="emotion-6"
          >
            <thead>
              <tr>
                <th
                  className="emotion-7"
                >
                  <div
                    className="emotion-8"
                  >
                    Name
                  </div>
                </th>
                <th
                  className="emotion-7"
                >
                  <div
                    className="emotion-8"
                  >
                    Source Type
                  </div>
                </th>
                <th
                  className="emotion-7"
                >
                  <div
                    className="emotion-8"
                  >
                    Path
                  </div>
                </th>
                <th
                  className="emotion-7"
                >
                  <div
                    className="emotion-8"
                  >
                    Date Created
                  </div>
                </th>
                <th
                  className="emotion-7"
                >
                  <div
                    className="emotion-8"
                  >
                    Date Modified
                  </div>
                </th>
                <th
                  className="emotion-7"
                >
                  <div
                    className="emotion-8"
                  >
                    File Types
                  </div>
                </th>
                <th
                  className="emotion-19"
                >
                  <div
                    className="emotion-20"
                  >
                    <svg
                      data-file-name="kebab.svg"
                      height={20}
                    />
                  </div>
                </th>
              </tr>
            </thead>
            <tbody>
              <tr
                className="emotion-21"
              >
                <td
                  colSpan={7}
                >
                  <div
                    className="emotion-22"
                  >
                    No data sources
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`<DataSources /> should render properly with scan success 1`] = `
Array [
  .emotion-0 {
  font-size: 18px;
  line-height: 21px;
  font-weight: 400;
  padding-top: 24px;
  padding-bottom: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<h2
    className="emotion-0"
  >
    Data Sources
  </h2>,
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 8px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  background-color: #e3f7e8;
  border-radius: 2px;
  padding: 12px;
  padding-left: 16px;
  padding-right: 16px;
}

.emotion-2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-left: 12px;
  color: #191919;
  font-weight: 500;
  white-space: pre-line;
}

.emotion-2 a {
  color: #191919;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  margin-left: 4px;
}

.emotion-2 a:hover {
  color: #3A5DFF;
}

<div
    className="emotion-0"
  >
    <div
      className="emotion-1"
    >
      <svg
        color="#009f22"
        data-file-name="checkmark.svg"
        height={20}
      />
      <div
        className="emotion-2"
        role="alert"
      >
        Data source
         is being scanned
        .
         
        <a
          href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/1a1d45af-7477-1396-ae57-a618e8efb91f"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Check Job Status
        </a>
      </div>
    </div>
  </div>,
  .emotion-0 {
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-1 {
  list-style-type: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-bottom: 1px solid #4a4a4a;
}

.emotion-2 {
  padding-right: 16px;
  margin-bottom: -1px;
}

.emotion-3 {
  border: 0 #3A5DFF solid;
  border-bottom-width: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 8px;
  padding-bottom: 8px;
  text-transform: uppercase;
  font-size: 17px;
  line-height: 20px;
  font-weight: 700;
}

.emotion-3:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-5 {
  border: 0 #3A5DFF solid;
  border-bottom-width: 0;
  color: #b3b3b3;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 8px;
  padding-bottom: 8px;
  text-transform: uppercase;
  font-size: 17px;
  line-height: 20px;
  font-weight: 700;
}

.emotion-5:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3A5DFF;
}

<nav
    className="emotion-0"
  >
    <ul
      className="emotion-1"
    >
      <li
        className="emotion-2"
      >
        <a
          className="emotion-3"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/data-sources"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          View all
        </a>
      </li>
      <li
        className="emotion-2"
      >
        <a
          className="emotion-5"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/data-sources/add"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Create Data Source
        </a>
      </li>
    </ul>
  </nav>,
  .emotion-0 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-1 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  padding-bottom: 16px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-3 {
  color: #b3b3b3;
  font-size: 15px;
  line-height: 19px;
  font-weight: 400;
}

.emotion-4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
}

.emotion-6 {
  height: auto;
  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
  white-space: nowrap;
}

.emotion-6 tr {
  background-color: #252525;
}

.emotion-6 tr:nth-of-type(2n) {
  background-color: #2e2e2e;
}

.emotion-6 tr:hover {
  background-color: #4a4a4a;
  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.5);
}

.emotion-6 tr:hover .actions {
  color: #b3b3b3;
}

.emotion-6 tr:hover td {
  border: 1px solid #808080;
  border-left: 0;
  border-right: 0;
}

.emotion-6 tr:hover td:first-of-type {
  border-left: 1px solid #808080;
}

.emotion-6 tr:hover td:last-of-type {
  border-right: 1px solid #808080;
}

.emotion-6 td {
  max-width: calc(100vw / 6);
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  color: #e0e0e0;
  padding: 8px 16px;
  border: 1px solid transparent;
  border-left: 0;
  border-right: 0;
}

.emotion-6 td:first-of-type {
  border-left: 1px solid transparent;
}

.emotion-6 td:last-of-type {
  border-right: 1px solid transparent;
  overflow: visible;
}

.emotion-7 {
  text-align: left;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  color: #e0e0e0;
  background-color: #4a4a4a;
  padding: 0;
  border-bottom: 1px solid #2e2e2e;
  width: auto;
}

.emotion-7:nth-of-type(3) {
  width: 100%;
}

.emotion-7:not(:last-child) {
  border-right: 1px solid #2e2e2e;
}

.emotion-8 {
  padding: 12px 16px;
}

.emotion-19 {
  text-align: left;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  color: #e0e0e0;
  background-color: #4a4a4a;
  padding: 0;
  border-bottom: 1px solid #2e2e2e;
  width: 1px;
}

.emotion-19:nth-of-type(3) {
  width: 100%;
}

.emotion-19:not(:last-child) {
  border-right: 1px solid #2e2e2e;
}

.emotion-20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 12px 16px;
}

.emotion-21 {
  cursor: pointer;
}

.emotion-22:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-23 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-24 {
  margin-right: 16px;
}

.emotion-26 {
  position: relative;
  height: 100%;
}

.emotion-27 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 6px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #191919;
  background-color: transparent;
  margin: -6px;
}

.emotion-27:hover,
.emotion-27.focus-visible:focus {
  color: #ffffff!important;
}

<div
    className="emotion-0"
  >
    <div
      className="emotion-1"
    >
      <div
        className="emotion-2"
      >
        <h3
          className="emotion-3"
        >
          Number of 
          Sources
          : 
          5
        </h3>
      </div>
      <div
        className="emotion-4"
      >
        <div
          className="emotion-5"
        >
          <table
            className="emotion-6"
          >
            <thead>
              <tr>
                <th
                  className="emotion-7"
                >
                  <div
                    className="emotion-8"
                  >
                    Name
                  </div>
                </th>
                <th
                  className="emotion-7"
                >
                  <div
                    className="emotion-8"
                  >
                    Source Type
                  </div>
                </th>
                <th
                  className="emotion-7"
                >
                  <div
                    className="emotion-8"
                  >
                    Path
                  </div>
                </th>
                <th
                  className="emotion-7"
                >
                  <div
                    className="emotion-8"
                  >
                    Date Created
                  </div>
                </th>
                <th
                  className="emotion-7"
                >
                  <div
                    className="emotion-8"
                  >
                    Date Modified
                  </div>
                </th>
                <th
                  className="emotion-7"
                >
                  <div
                    className="emotion-8"
                  >
                    File Types
                  </div>
                </th>
                <th
                  className="emotion-19"
                >
                  <div
                    className="emotion-20"
                  >
                    <svg
                      data-file-name="kebab.svg"
                      height={20}
                    />
                  </div>
                </th>
              </tr>
            </thead>
            <tbody>
              <tr
                className="emotion-21"
                onClick={[Function]}
              >
                <td>
                  <a
                    className="emotion-22"
                    href="/76917058-b147-4556-987a-0a0f11e46d9b/data-sources/2f0de857-95fd-120e-85f3-0242ac120002/edit"
                    onClick={[Function]}
                    onMouseEnter={[Function]}
                  >
                    test
                  </a>
                </td>
                <td>
                  Amazon Web Service (AWS)
                </td>
                <td>
                  s3://zorroa-dev-data
                </td>
                <td>
                  2020-02-10 01:37:47
                </td>
                <td>
                  2020-02-10 01:37:47
                </td>
                <td>
                  <div
                    className="emotion-23"
                  >
                    <svg
                      className="emotion-24"
                      color="#ebb52e"
                      data-file-name="images.svg"
                      height={24}
                    />
                    <svg
                      className="emotion-24"
                      color="transparent"
                      data-file-name="documents.svg"
                      height={24}
                    />
                    <svg
                      color="transparent"
                      data-file-name="videos.svg"
                      height={24}
                    />
                  </div>
                </td>
                <td>
                  <div
                    className="emotion-26"
                  >
                    <button
                      aria-label="Toggle Actions Menu"
                      className="actions emotion-27"
                      onBlur={[Function]}
                      onClick={[Function]}
                      type="button"
                    >
                      <svg
                        data-file-name="kebab.svg"
                        height={20}
                      />
                    </button>
                  </div>
                </td>
              </tr>
              <tr
                className="emotion-21"
                onClick={[Function]}
              >
                <td>
                  <a
                    className="emotion-22"
                    href="/76917058-b147-4556-987a-0a0f11e46d9b/data-sources/2f0de85b-95fd-120e-85f3-0242ac120002/edit"
                    onClick={[Function]}
                    onMouseEnter={[Function]}
                  >
                    test2
                  </a>
                </td>
                <td>
                  Azure
                </td>
                <td>
                  azure://zorroa-dev-data
                </td>
                <td>
                  2020-02-10 01:40:26
                </td>
                <td>
                  2020-02-10 01:40:26
                </td>
                <td>
                  <div
                    className="emotion-23"
                  >
                    <svg
                      className="emotion-24"
                      color="transparent"
                      data-file-name="images.svg"
                      height={24}
                    />
                    <svg
                      className="emotion-24"
                      color="#00bdc1"
                      data-file-name="documents.svg"
                      height={24}
                    />
                    <svg
                      color="transparent"
                      data-file-name="videos.svg"
                      height={24}
                    />
                  </div>
                </td>
                <td>
                  <div
                    className="emotion-26"
                  >
                    <button
                      aria-label="Toggle Actions Menu"
                      className="actions emotion-27"
                      onBlur={[Function]}
                      onClick={[Function]}
                      type="button"
                    >
                      <svg
                        data-file-name="kebab.svg"
                        height={20}
                      />
                    </button>
                  </div>
                </td>
              </tr>
              <tr
                className="emotion-21"
                onClick={[Function]}
              >
                <td>
                  <a
                    className="emotion-22"
                    href="/76917058-b147-4556-987a-0a0f11e46d9b/data-sources/2f0de85f-95fd-120e-85f3-0242ac120002/edit"
                    onClick={[Function]}
                    onMouseEnter={[Function]}
                  >
                    test3
                  </a>
                </td>
                <td>
                  Google Cloud Platform (GCP)
                </td>
                <td>
                  gs://zorroa-dev-data
                </td>
                <td>
                  2020-02-10 01:42:23
                </td>
                <td>
                  2020-02-10 01:42:23
                </td>
                <td>
                  <div
                    className="emotion-23"
                  >
                    <svg
                      className="emotion-24"
                      color="transparent"
                      data-file-name="images.svg"
                      height={24}
                    />
                    <svg
                      className="emotion-24"
                      color="transparent"
                      data-file-name="documents.svg"
                      height={24}
                    />
                    <svg
                      color="#8f89e7"
                      data-file-name="videos.svg"
                      height={24}
                    />
                  </div>
                </td>
                <td>
                  <div
                    className="emotion-26"
                  >
                    <button
                      aria-label="Toggle Actions Menu"
                      className="actions emotion-27"
                      onBlur={[Function]}
                      onClick={[Function]}
                      type="button"
                    >
                      <svg
                        data-file-name="kebab.svg"
                        height={20}
                      />
                    </button>
                  </div>
                </td>
              </tr>
              <tr
                className="emotion-21"
                onClick={[Function]}
              >
                <td>
                  <a
                    className="emotion-22"
                    href="/76917058-b147-4556-987a-0a0f11e46d9b/data-sources/3eee30e4-3aaf-1933-b424-0242ac12000e/edit"
                    onClick={[Function]}
                    onMouseEnter={[Function]}
                  >
                    test4
                  </a>
                </td>
                <td>
                  Unknown
                </td>
                <td>
                  ftp://zorroa-dev-data
                </td>
                <td>
                  2020-02-10 16:21:18
                </td>
                <td>
                  2020-02-10 16:21:18
                </td>
                <td>
                  <div
                    className="emotion-23"
                  >
                    <svg
                      className="emotion-24"
                      color="#ebb52e"
                      data-file-name="images.svg"
                      height={24}
                    />
                    <svg
                      className="emotion-24"
                      color="#00bdc1"
                      data-file-name="documents.svg"
                      height={24}
                    />
                    <svg
                      color="#8f89e7"
                      data-file-name="videos.svg"
                      height={24}
                    />
                  </div>
                </td>
                <td>
                  <div
                    className="emotion-26"
                  >
                    <button
                      aria-label="Toggle Actions Menu"
                      className="actions emotion-27"
                      onBlur={[Function]}
                      onClick={[Function]}
                      type="button"
                    >
                      <svg
                        data-file-name="kebab.svg"
                        height={20}
                      />
                    </button>
                  </div>
                </td>
              </tr>
              <tr
                className="emotion-21"
                onClick={[Function]}
              >
                <td>
                  <a
                    className="emotion-22"
                    href="/76917058-b147-4556-987a-0a0f11e46d9b/data-sources/3eee30e8-3aaf-1933-b424-0242ac12000e/edit"
                    onClick={[Function]}
                    onMouseEnter={[Function]}
                  >
                    test5
                  </a>
                </td>
                <td>
                  Google Cloud Platform (GCP)
                </td>
                <td>
                  gs://zorroa-dev-data
                </td>
                <td>
                  2020-02-10 16:47:39
                </td>
                <td>
                  2020-02-10 16:47:39
                </td>
                <td>
                  <div
                    className="emotion-23"
                  >
                    <svg
                      className="emotion-24"
                      color="transparent"
                      data-file-name="images.svg"
                      height={24}
                    />
                    <svg
                      className="emotion-24"
                      color="transparent"
                      data-file-name="documents.svg"
                      height={24}
                    />
                    <svg
                      color="#8f89e7"
                      data-file-name="videos.svg"
                      height={24}
                    />
                  </div>
                </td>
                <td>
                  <div
                    className="emotion-26"
                  >
                    <button
                      aria-label="Toggle Actions Menu"
                      className="actions emotion-27"
                      onBlur={[Function]}
                      onClick={[Function]}
                      type="button"
                    >
                      <svg
                        data-file-name="kebab.svg"
                        height={20}
                      />
                    </button>
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
        <div>
           
        </div>
        <div>
           
        </div>
      </div>
    </div>
  </div>,
]
`;
